[package]
name = "model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
lazy_static = "1.4.0"
reqwest = { version = "0.11.10", features = ["json","multipart"] }
serde = { version = "1.0.137", features = ["derive"] }
tokio = { version = "1.18.1", features = ["full"] }
