[package]
name = "rush"
description = "rush helps you!"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/junhaideng/rush"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.15", features = ["derive"] }
tokio = { version = "1.18.1", features = ["full"] }
model = {path = "../model" }
anyhow = "1.0.57"
chrono = "0.4.19"
